package com.jovisco.invoicing.pdf;

public class PdfInvoiceDocumentGeneratorDEde extends PdfInvoiceDocumentGenerator {

    public PdfInvoiceDocumentGeneratorDEde(
            CreatePdfInvoiceDocumentRequest request,
            String invoiceTemplateFilePath,
            String targetFilePath) {
        super(request, invoiceTemplateFilePath, targetFilePath);
    }

    @Override
    protected void fillMetaInformation() {
        super.fillMetaInformation();
        var metadata = doc.getDocumentInformation();
        metadata.setKeywords("Jovisco, Invoice, " + request.invoiceId() + ", DE_de");
    }
}
